2006-11-30  Dom Lachowicz <domlachowicz@gmail.com>

	* src/cr-num.c: Bug 381040 - floating numbers always output to exactly 3 digits after decimal points.
	Also fixed a related bug where libcroco wouldn't emit compliant CSS strings if run in a non-C locale.
	
2006-11-29  Dom Lachowicz <domlachowicz@gmail.com>

	* src/cr-token.c: Bug 380438 - Leak and trace message in cr_token_clear.
	Fix suggested by Mark Rogers <mark.rogers at electrum.co.uk>
	
2006-11-14  Dom Lachowicz <domlachowicz@gmail.com>

	* src/cr-rgb.c: Bug 375194 - fix to builtin color processing
	
2006-05-02  Peter Moulder <pmoulder at mail.csse.monash.edu.au>
	
	* src/*.[ch]: Bug 340298 - Fixes to documentation markup.

2006-05-02  Dom Lachowicz <cinamod@hotmail.com>

	* src/Makefile.am: Fix linking by adding proper dependencies (bug 148790)
	Cygwin build fixes
	* configure.in: Detect Cygwin in addition to Mingw (bug 333834)
	* csslint/csslint.c: Fix 3 "dereferencing type-punned pointer will break strict-aliasing rules" warnings
	
2006-04-29  Dom Lachowicz <cinamod@hotmail.com>

	* src/cr-tknzr.c: Revert my previous change and instead use Inkscape's
	patch in bug #306823, as it improves precision
	* src/cr-utils.[ch]: Ditto

	============= 0.6.1 release =======================

dim mar  5 23:32:14 CET 2006 Dodji Seketeli

	* configure.in,docs/Makefile.am: 
	  unwire gtk-doc temporarily. Couldn't make it
	  distcheck otherwise.
	* tests/Makefile.am: add global-vars.sh.in to EXTRA_DIST files.
	* confifure.in: increase library REVISION number, for 0.6.1 release.

2006-03-01  Dom Lachowicz <cinamod@hotmail.com>

	* src/cr-tknzr.c: Parse fractional parts of numbers properly (bug 333057)
	* src/cr-utils.[ch]: Ditto
	* configure.in: bump version to so that librsvg can depend on its fixes
	
2005-11-16  Tor Lillqvist  <tml@novell.com>

	* libcroco-zip.in: New file. libcroco-zip is used to build a
	libcroco distribution for Win32.

	* Makefile.am: Distribute libcroco-zip.in
